--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
     </section>
 </div>
 
-<div class="mobile-menu">
+<div class="mobile-menu-hidden">
     <section class="mobile-menu-header">
         <div class="mobile-menu-header-welcome">
             Hello, Shane Lowry
