--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,7 @@
         <!-- <img src="https://source.unsplash.com/random" alt=""> -->
     </div>
     <div class="burger-menu">
-        <span></span>
-        <span></span>
-        <span></span>
+        <i class="fas fa-bars"></i>
     </div>
 </nav>
 
@@ -38,7 +36,7 @@
                 <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
             </div>
             <div class="form-group">
-                <button type="submit">Connect</button>
+                <button class="" type="submit">Connect</button>
             </div>
         </form>
     </section>
